--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,21 @@
-.App {
-  text-align: center;
+.sr-only {
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  word-wrap: normal;
 }
 
-.App-logo {
-  height: 40vmin;
+a:focus,
+button:focus {
+  outline: 3px solid #0f4beb;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+button:hover {
+  cursor: pointer;
 }
