--- a/src/Header/Search.css
+++ b/src/Header/Search.css
@@ -28,6 +28,7 @@
     font-size: 100px;
     font-weight: 700;
     padding: .4em .7em;
+    appearance: none;
 
     color: #fff;
     border: none;
