--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,33 @@
   word-wrap: normal;
 }
 
+.skip-to-main {
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  word-wrap: normal;
+}
+
+.skip-to-main:focus {
+  z-index: 2;
+  border: 0;
+  clip: initial;
+  clip-path: none;
+  height: auto;
+  margin: 10px;
+  overflow: initial;
+  padding: 0;
+  position: absolute;
+  width: auto;
+  word-wrap: normal;
+}
+
 a:focus,
 button:focus {
   outline: 3px solid #0f4beb;
@@ -31,4 +58,12 @@ a {
   text-decoration: none;
   border-bottom: 1px solid transparent;
   outline: none;
+}
+
+strong {
+  font-weight: 700;
+}
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
 }
