--- a/src/App.css
+++ b/src/App.css
@@ -40,11 +40,15 @@
 
 a:focus,
 button:focus {
-  outline: 3px solid #0f4beb;
+  outline: 3px solid orange;
 }
 
 button:hover {
   cursor: pointer;
+}
+
+body p {
+  line-height: 1.5;
 }
 
 ul {
@@ -57,7 +61,7 @@ a {
   transition: opacity .3s ease, background .3s ease, border .3s ease, color .3s ease;
   text-decoration: none;
   border-bottom: 1px solid transparent;
-  outline: none;
+  /* outline: none; */
 }
 
 strong {
