--- a/src/Components/Slider/Slider.css
+++ b/src/Components/Slider/Slider.css
@@ -21,7 +21,7 @@
     margin-bottom: 10px;
 }
 
-.slide h2 {
+.slide .text h3 {
     font-weight: 300;
     margin: 0 0 10px;
 }
@@ -38,6 +38,14 @@
     vertical-align: top;
     color: #fff;
     background: #000;
+}
+
+.btn:focus {
+    /* outline: 3px solid #ffffff; */
+}
+
+.slide .btn:focus {
+    /* outline: 3px solid #ffffff; */
 }
 
 .slide {
