Completed everything except footer and side-panel

--- a/src/Components/Block/Block.css
+++ b/src/Components/Block/Block.css
@@ -23,6 +23,10 @@
     background: #ebebeb;
 }
 
+.bg-white {
+    background: #ffffff;
+}
+
 .col-wrap.color-black {
     height: unset;
     width: 100%;
